dynamic codecov slug
Signed-off-by: Maciej Ptak <0ptaq0@gmail.com>

--- a/examples/salesforce-ci-with-sast.yml
+++ b/examples/salesforce-ci-with-sast.yml
@@ -26,7 +26,7 @@ jobs:
       node-version: '20'
       test-level: 'RunLocalTests'
       upload-to-codecov: true
-      codecov-slug: 'beyond-the-cloud-dev/your-repo'  # Change this to your repo
+      codecov-slug: ${{ github.repository }}  # Automatically uses current repository
     secrets:
       SFDX_AUTH_URL_DEVHUB: ${{ secrets.SFDX_AUTH_URL_DEVHUB }}
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
