--- a/.github/workflows/salesforce-ci-with-build.yml
+++ b/.github/workflows/salesforce-ci-with-build.yml
@@ -37,7 +37,7 @@ on:
         type: number
         default: 30
       test-level:
-        description: 'Test level (NoTestRun, RunSpecifiedTests, RunLocalTests, RunAllTestsInOrg)'
+        description: 'Test level (RunLocalTests, RunAllTestsInOrg, etc.)'
         required: false
         type: string
         default: 'RunLocalTests'
@@ -65,11 +65,6 @@ on:
         required: false
         type: string
         default: 'force-app'
-      scratch-org-def-file:
-        description: 'Path to scratch org definition file'
-        required: false
-        type: string
-        default: 'config/project-scratch-def.json'
       checkout-submodules:
         description: 'Whether to checkout git submodules'
         required: false
@@ -86,6 +81,10 @@ on:
 jobs:
   build-deploy-and-test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
 
     steps:
       - name: 📥 Checkout source code
@@ -162,6 +161,8 @@ jobs:
           echo "✓ Successfully deployed source"
 
       - name: 🧪 Run Apex tests
+        id: run-tests
+        continue-on-error: true
         run: |
           sf apex run test \
             --target-org ScratchOrg \
@@ -171,6 +172,94 @@ jobs:
             --test-level ${{ inputs.test-level }} \
             --wait ${{ inputs.test-wait }}
 
+      - name: 📊 Parse test results and create report
+        if: always()
+        id: parse-results
+        run: |
+          REPORT_FILE="./tests/apex/test-failures-report.log"
+          SUMMARY_FILE="./tests/apex/test-summary.txt"
+
+          mkdir -p ./tests/apex
+
+          # Find the test result JSON file (format: test-result-{ID}.json)
+          TEST_RESULT_FILE=$(find ./tests/apex -name "test-result-*.json" -not -name "*codecoverage*" -not -name "*junit*" | head -1)
+
+          if [ -z "$TEST_RESULT_FILE" ]; then
+            echo "⚠️ No test results found" > "$SUMMARY_FILE"
+            echo "has_failures=false" >> $GITHUB_OUTPUT
+            echo "total_tests=0" >> $GITHUB_OUTPUT
+            echo "passed=0" >> $GITHUB_OUTPUT
+            echo "failed=0" >> $GITHUB_OUTPUT
+            echo "skipped=0" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          echo "📄 Found test results: $TEST_RESULT_FILE"
+
+          # Parse test results using jq
+          TOTAL_TESTS=$(jq -r '.summary.testsRan // 0' "$TEST_RESULT_FILE")
+          PASSED=$(jq -r '.summary.passing // 0' "$TEST_RESULT_FILE")
+          FAILED=$(jq -r '.summary.failing // 0' "$TEST_RESULT_FILE")
+          SKIPPED=$(jq -r '.summary.skipped // 0' "$TEST_RESULT_FILE")
+
+          echo "total_tests=$TOTAL_TESTS" >> $GITHUB_OUTPUT
+          echo "passed=$PASSED" >> $GITHUB_OUTPUT
+          echo "failed=$FAILED" >> $GITHUB_OUTPUT
+          echo "skipped=$SKIPPED" >> $GITHUB_OUTPUT
+
+          # Create summary
+          {
+            echo "=========================================="
+            echo "     APEX TEST EXECUTION SUMMARY"
+            echo "=========================================="
+            echo ""
+            echo "📊 Total Tests: $TOTAL_TESTS"
+            echo "✅ Passed: $PASSED"
+            echo "❌ Failed: $FAILED"
+            echo "⏭️  Skipped: $SKIPPED"
+            echo ""
+          } > "$SUMMARY_FILE"
+
+          if [ "$FAILED" -gt 0 ]; then
+            echo "has_failures=true" >> $GITHUB_OUTPUT
+
+            {
+              echo "=========================================="
+              echo "        FAILED TEST DETAILS"
+              echo "=========================================="
+              echo ""
+            } >> "$REPORT_FILE"
+
+            # Extract failed tests with full details
+            jq -r '.tests[] | select(.Outcome == "Fail") |
+              "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n" +
+              "❌ TEST FAILED: \(.FullName)\n" +
+              "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n" +
+              "Class: \(.ApexClass.Name)\n" +
+              "Method: \(.MethodName)\n" +
+              "Message: \(.Message // "No message")\n" +
+              "Stack Trace:\n\(.StackTrace // "No stack trace available")\n" +
+              "Runtime: \(.RunTime)ms\n" +
+              "\n"' "$TEST_RESULT_FILE" >> "$REPORT_FILE"
+
+            # Create shortened summary for PR comment
+            {
+              echo ""
+              echo "Failed Tests:"
+              echo ""
+            } >> "$SUMMARY_FILE"
+
+            jq -r '.tests[] | select(.Outcome == "Fail") |
+              "• \(.ApexClass.Name).\(.MethodName)\n  └─ \(.Message // "No message")"' \
+              "$TEST_RESULT_FILE" >> "$SUMMARY_FILE"
+          else
+            echo "has_failures=false" >> $GITHUB_OUTPUT
+            echo "" >> "$SUMMARY_FILE"
+            echo "🎉 All tests passed successfully!" >> "$SUMMARY_FILE"
+          fi
+
+          cat "$SUMMARY_FILE"
+
       - name: 📊 Upload test results as artifact
         if: always()
         uses: actions/upload-artifact@v4
@@ -178,6 +267,85 @@ jobs:
           name: apex-test-results
           path: ./tests/apex
           retention-days: 30
+
+      - name: 💬 Comment PR with test results
+        if: always() && github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const path = './tests/apex/test-summary.txt';
+
+            if (!fs.existsSync(path)) {
+              console.log('No test summary file found, skipping PR comment');
+              return;
+            }
+
+            let summary = fs.readFileSync(path, 'utf8');
+            const hasFailures = '${{ steps.parse-results.outputs.has_failures }}' === 'true';
+            const totalTests = '${{ steps.parse-results.outputs.total_tests }}';
+            const passed = '${{ steps.parse-results.outputs.passed }}';
+            const failed = '${{ steps.parse-results.outputs.failed }}';
+            const runId = '${{ github.run_id }}';
+            const repo = context.repo;
+
+            // Construct artifact URL
+            const artifactUrl = `https://github.com/${repo.owner}/${repo.repo}/actions/runs/${runId}`;
+
+            // Build comment body
+            let commentBody = '## 🧪 Apex Test Results\n\n';
+
+            if (hasFailures) {
+              commentBody += '### ❌ Tests Failed\n\n';
+            } else {
+              commentBody += '### ✅ All Tests Passed\n\n';
+            }
+
+            commentBody += '```\n' + summary + '\n```\n\n';
+
+            // Add link to full artifact
+            commentBody += `📦 **[Download Full Test Results & Logs](${artifactUrl})**\n\n`;
+
+            // Truncate if too long (GitHub comment limit is 65536 chars)
+            const maxLength = 65000;
+            if (commentBody.length > maxLength) {
+              commentBody = commentBody.substring(0, maxLength) + '\n\n... (truncated)\n\n';
+              commentBody += `⚠️ **Comment truncated due to size.** [Download full results](${artifactUrl})\n`;
+            }
+
+            commentBody += `\n---\n📊 Stats: ${totalTests} total | ✅ ${passed} passed | ❌ ${failed} failed\n`;
+            commentBody += `🤖 _Automated comment by [Salesforce CI](.github/workflows/salesforce-ci-with-build.yml)_`;
+
+            // Find existing comment to update or create new
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: repo.owner,
+              repo: repo.repo,
+              issue_number: context.issue.number,
+            });
+
+            const botComment = comments.find(comment =>
+              comment.user.type === 'Bot' &&
+              comment.body.includes('🧪 Apex Test Results')
+            );
+
+            if (botComment) {
+              // Update existing comment
+              await github.rest.issues.updateComment({
+                owner: repo.owner,
+                repo: repo.repo,
+                comment_id: botComment.id,
+                body: commentBody
+              });
+            } else {
+              // Create new comment
+              await github.rest.issues.createComment({
+                owner: repo.owner,
+                repo: repo.repo,
+                issue_number: context.issue.number,
+                body: commentBody
+              });
+            }
 
       - name: 📈 Upload coverage to Codecov
         if: inputs.upload-to-codecov && inputs.codecov-slug != '' && success()
@@ -187,6 +355,12 @@ jobs:
           slug: ${{ inputs.codecov-slug }}
           flags: Apex
           files: ./tests/apex/test-result-codecoverage.json
+
+      - name: ❌ Fail workflow if tests failed
+        if: steps.parse-results.outputs.has_failures == 'true'
+        run: |
+          echo "❌ Apex tests failed. Check the test results artifact for details."
+          exit 1
 
       - name: 🧹 Cleanup scratch org
         if: always()
